syntax = "proto3";
package pb;
import "github.com/AsynkronIT/protoactor-go/actor/protos.proto";
import "game_code.proto";
import "game_pub.proto";
import "game_type.proto";

//玩家行为操作

//登录设置连接
message SetLogin {
    actor.PID Sender = 1;
}

message SetLogined {
    actor.PID RolePid = 1;
}

//登录大厅
message LoginHall {
    string Userid = 1;
    string NodeName = 2;
}

message LoginedHall {
    ErrCode error = 1 ;// 错误码
}

//登录成功
message Login {
    string Userid = 1;
    string Gate = 2;
    actor.PID RolePid = 3;
}

message Logined {
    bytes Data = 3;
}

//玩家信息
message GetUser {
    string Userid = 1;
    string Gate = 2;
    actor.PID RolePid = 3;
}

message GotUser {
    bytes Data = 1;
    ErrCode error = 2 ;// 错误码
}

//别处登录
message LoginElse {
    string Userid = 1;
    string Gate = 2;
}

message LoginedElse {
    string Userid = 1;
    string Gate = 2;
}

//登出
message Logout {
    actor.PID Sender = 1;
    string Userid = 2;
    //string Data = 3;
}

message Logouted {
    string Message = 1;
}

//同步数据,(登录时,变更时)
message SyncUser {
    string Userid = 1;
    bytes Data = 2;
}

//同步变动货币数据
message ChangeCurrency {
    string Userid = 1;
    int32 Type = 2;//变动类型
    int64 Coin = 3;//变动金币数量
    int64 Diamond = 4;//变动钻石数量
    int64 Chip = 5;//变动筹码数量
    int64 Card = 6;//变动房卡数量
    int64 Money = 7;//变动充值数量
}

//房间离线同步结算变动货币数据
message OfflineCurrency {
    string Userid = 1;
    int32 Type = 2;//变动类型
    int64 Coin = 3;//变动金币数量
    int64 Diamond = 4;//变动钻石数量
    int64 Chip = 5;//变动筹码数量
    int64 Card = 6;//变动房卡数量
    int64 Money = 7;//变动充值数量
    string Roomid = 8;//所在房间
}

//同步变动货币数据(充值或后台操作等)
message PayCurrency {
    string Userid = 1;
    int32 Type = 2;//变动类型
    int64 Coin = 3;//变动金币数量
    int64 Diamond = 4;//变动钻石数量
    int64 Chip = 5;//变动筹码数量
    int64 Card = 6;//变动房卡数量
    int64 Money = 7;//变动充值数量
}

////获取数据
//message GetUserid {
//    actor.PID Sender = 1;
//}
//
//message GotUserid {
//    string Userid = 1;
//}

////获取唯一id
//message GetUniqueid {
//    actor.PID Sender = 1;
//}
//
//message GotUniqueid {
//    string Uniqueid = 1;
//}

//登录(验证登录)
message RoleLogin {
    string Phone    = 1; //手机
    string Password = 2; //密码 (MD5)
}

message RoleLogined {
    string Userid = 1;
    ErrCode Error  = 2 ;// 错误码
}

//注册(验证注册)
message RoleRegist {
    string Nickname = 1;//昵称
    string Phone    = 2;//手机号
    string Password = 3;//密码(md5)
    string Smscode  = 4;//验证码
    string Safetycode  = 5;//安全码
}

message RoleRegisted {
    string Userid = 1;
    ErrCode Error  = 2 ;// 错误码
}

//登录(验证登录)
message WxLogin {
    string Wxuid = 1;
    string Nickname = 2;
    string Photo = 3;
    uint32 Sex = 4;
    string OpenId = 5;
    string UnionId = 6;
}

message WxLogined {
    string Userid = 1;
    bool IsRegist = 2;
    ErrCode error  = 3 ;// 错误码
}

//玩家信息
message GetUserData {
    string Userid = 1;
}

message GotUserData {
    UserData data = 1;
    TopInfo info = 2;
    ErrCode error = 3 ;// 错误码
}

//验证码注册
message SmscodeRegist {
    uint32 Type  = 1;//1注册,2删除,3查询
    string Phone    = 2;//手机号
    string Smscode  = 3;//验证码
    int64 Expired  = 4;//验证码有效期
    string Ipaddr  = 5;//ipaddr
}

message SmscodeRegisted {
    string Smscode  = 1;//验证码
    ErrCode Error  = 2 ;// 错误码
}

//绑定手机
message RoleBuild {
    string Nickname = 1;//昵称
    string Phone    = 2;//手机号
    string Password = 3;//密码(md5)
    string Smscode  = 4;//验证码
    string Safetycode  = 5;//安全码
}

message RoleBuilded {
    string Userid = 1;
    ErrCode Error  = 2 ;// 错误码
}

//游客登录(验证登录)
message TouristLogin {
    string Account  = 1; //手机
    string Password = 2; //密码 (MD5)
    string Registip = 3; //注册ip
}

message TouristLogined {
    string Userid = 1;
    bool IsRegist = 2;
    ErrCode Error  = 3 ;// 错误码
}

//银行赠送
message BankGive {
    string Userid = 1;
    int32 Type = 2;//变动类型
    int64 Coin = 3;//变动金币数量
    string From = 4;
}

message BankGiven {
    string Userid = 1;
    int32 Type = 2;//变动类型
    int64 Coin = 3;//变动金币数量
    ErrCode Error  = 4 ;// 错误码
}

//银行重置密码,银行开放验证
message BankCheck {
    string Userid = 1;
    string Phone = 2;
    string Password = 3;
    string Smscode = 4;//验证码
}

message BankChecked {
    ErrCode Error  = 1 ;// 错误码
}

//银行变动
message BankChange {
    string Userid = 1;
    int32 Type = 2;//变动类型
    int64 Coin = 3;//变动金币数量
    string From = 4;
}

//完成任务
message TaskUpdate {
    string Userid = 1;
    int32 Taskid = 2;//unique
    TaskType Type = 3;//类型
    uint32 Num = 4; //更新数量
    bool Prize = 5; //领取奖励
    int32 Nextid = 6;//unique
}

//lucky任务
message LuckyUpdate {
    string Userid = 1;
    int32 Luckyid = 2;//unique
    uint32 Num = 3; //更新数量
    int32 Gtype = 4;//game type
}

//登录数据更新
message LoginPrizeUpdate {
    string Userid = 1;
    uint32 LoginTimes = 2;//
    uint32 LoginPrize = 3;//
    int64 LoginTime = 4; //
    string LoginIP = 5; //
}

// 个人私人场牌局记录,默认最近30场
message GetRoomRecord
{
    int32 gtype = 1;//game type
    uint32 page = 2;//页数,每页30,默认发1最近30场
    string userid = 3;
}
